# 004

./: .gitignore  说明.md
.trae/specs/create-flutter-app/: checklist.md  spec.md  tasks.md
.trae/specs/create-platformio-firmware/: checklist.md  spec.md  tasks.md
.trae/specs/fix-hardware-and-software-issues/: checklist.md  spec.md  tasks.md
app/: README.md  pubspec.yaml
app/android/: settings.gradle.kts
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: app.dart  main.dart
app/lib/config/: routes.dart  theme.dart
app/lib/models/: ble_device.dart  daily_goal.dart  daily_report.dart  daily_summary.dart  health_data.dart  sleep_data.dart  training_plan.dart  user_profile.dart
app/test/: widget_test.dart
firmware/: .clangd  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc-1
firmware/include/: actuator.h  arrhythmia_screener.h  ble.h  calorie.h  deepseek_api.h  fall_detector.h  heart_rate.h  i2c_bus.h  max30102.h  motion_classifier.h  mpu6050.h  power_mgmt.h  sleep_analyzer.h  spo2.h  ssd1306.h  step_counter.h  w25q32.h  wifi_conn.h
firmware/src/: CMakeLists.txt  actuator.c  arrhythmia_screener.c  ble.c  calorie.c  deepseek_api.c  fall_detector.c  heart_rate.c  i2c_bus.c  main.c  max30102.c  motion_classifier.c  mpu6050.c  power_mgmt.c  sleep_analyzer.c  spo2.c  ssd1306.c  step_counter.c  w25q32.c  wifi_conn.c
计划/: 硬件部分_实施计划.md  软件部分_实施计划.md  边缘AI_实现指南.md
计划/边缘AI代码/: README.md  train_fall_detector.py  train_motion_classifier.py
(+18 files in other folders)
